<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_transaksiberhasil"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/TVnama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_nama" />

    <TextView
        android:id="@+id/TVbarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_barang" />

    <TextView
        android:id="@+id/TVcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_code" />

    <TextView
        android:id="@+id/TVharga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_harga" />

    <TextView
        android:id="@+id/TVjumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_jumlah" />

    <TextView
        android:id="@+id/TVbayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_bayar" />

    <TextView
        android:id="@+id/TVtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_total" />

    <TextView
        android:id="@+id/TVbonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_bonus"/>

    <TextView
        android:id="@+id/TVkembalian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/string_kembalian"/>

    <TextView
        android:id="@+id/TVketerangan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/string_keterangan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonhapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:scrollbarSize="20dp"
            android:text="@string/string_hapus"
            android:textSize="15dp" />

        <Button
            android:id="@+id/buttonberbagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:scrollbarSize="20dp"
            android:text="@string/string_berbagi"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>