<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

            <TextView
                android:id="@+id/TVnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_nama"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETnama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:hint="@string/string_ETnama" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVbarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_barang"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETbarang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:hint="@string/string_ETbarang" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_code"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="12sp"
                    android:hint="@string/string_ETcode" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVharga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_harga"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETharga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:hint="@string/string_ETharga" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVjumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_jumlah"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETjumlah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:hint="@string/string_ETjumlah" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/TVbayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_bayar"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETbayar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:hint="@string/string_ETbayar"
                    android:layout_marginBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:scrollbarSize="20dp"
            android:text="@string/string_ok"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/coklat"
            android:textSize="15dp"
            android:layout_marginBottom="20dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="299dp" />

        <TextView
            android:id="@+id/TVtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TVbonus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TVkembalian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TVketerangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>